# Sandbox

./: .gitignore  README.md
Boost_Test/include/: builders.h  dependencyInversion.h  interfaces.h  liskov.h  openclose.h
Boost_Test/src/: main.cpp
CPP_Practice/: CMakeLists.txt  design_pattern_notes.txt
CPP_Practice/include/: deleg_constr.h  forwarding.h  initializer_tests.h  lambda_tests.h  ring.h  ring_test.h  test.h
CPP_Practice/src/: deleg_constr.cpp  forwarding.cpp  initializer_tests.cpp  lambda_tests.cpp  main.cpp  ring.cpp  ring_test.cpp
Fractal_Image/: CMakeLists.txt
Fractal_Image/include/: bitmap.h  bitmapFileHeader.h  bitmapInfoHeader.h  fractalcreator.h  mandelbrot.h  zoom.h  zoomList.h
Fractal_Image/src/: bitmap.cpp  fractalcreator.cpp  main.cpp  mandelbrot.cpp  zoomList.cpp
facet_builder/: CMakeLists.txt
facet_builder/src/: Facets.cpp  main.cpp
